# libnogdb

./: .gitignore  .travis.yml  AGENTS.md  BSDmakefile  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  COPYRIGHT  Makefile.bak  README.md  install_ci_make.sh  install_make.sh  runtest.db.settings.nogdb  unittest_all
.windsurf/rules/: api-conventions.md  clean-architecture.md  code-review-checklist.md  commit-standards.md  data-flow-asvs.md  database-patterns.md  fullstack-standards.md  interface-boundaries.md  interface-first-licensed-code.md  prefer-enum-over-string.md  security-guidelines.md  spec-first-development.md  structured-logging.md  testing-standards.md  todo-fixme-mock-operation.md  uuid-identifiers.md
.windsurf/skills/api-design-principles/: skill.md
.windsurf/skills/api-to-ui/: SKILL.md
.windsurf/skills/architecture-patterns/: skill.md
.windsurf/skills/better-auth-best-practices/: skill.md
.windsurf/skills/c4-architecture/: skill.md
.windsurf/skills/code-review/: SKILL.md
.windsurf/skills/commit-work/: skill.md
.windsurf/skills/data-flow-validation/: SKILL.md
.windsurf/skills/error-handling-patterns/: skill.md
.windsurf/skills/figma-mcp/: SKILL.md
.windsurf/skills/interface-first/: SKILL.md
.windsurf/skills/laws-of-ux/: skill.md
.windsurf/skills/microservices-patterns/: skill.md
.windsurf/skills/react-best-practices/: skill.md
.windsurf/skills/session-handoff/: skill.md
.windsurf/skills/supabase-postgres-best-practices/: skill.md
.windsurf/skills/systematic-debugging/: skill.md
.windsurf/skills/test-driven-development/: skill.md
.windsurf/skills/test-generation/: SKILL.md
.windsurf/skills/test-suite-generation/: SKILL.md
.windsurf/skills/web-design-guidelines/: skill.md
.windsurf/workflow_script/: README.md  agent-merge-worktrees.sh  agent-register.sh  agent-signal-listener.sh  agent-tab-watcher.sh  agent-worktree-watcher.sh  cleanup-multi-agent.sh  launch-multi-agent.sh  service-extract.md
.windsurf/workflows/: agent-01-coordination.md  agent-coordination.md  aspec-01-project-spec.md  aspec-01.1-add-subspec.md  aspec-02-user-stories.md  aspec-03-use-cases.md  aspec-04-data-model.md  aspec-05-data-structure.md  aspec-06-actor-list.md  aspec-07-function-list.md  aspec-08-action-function.md  aspec-09-access-control.md  aspec-10-object-lifecycle.md  aspec-11-persistence.md  aspec-11.1-bus_design.md  aspec-12-architecture.md  aspec-12.1-service-registry.md  aspec-13-module-design.md  aspec-14-api-design.md  aspec-15-agents-md.md  aspec-15.1-deployment.md  aspec-16-ux-design.md  aspec-16.1-ux-page-flow.md  aspec-16.2-ux-wireframe-flow-req.md  aspec-16.3-state-diagram.md  aspec-17-plan.md  aspec-18-tasks.md  aspec-18.1-task_allocation.md  aspec-18.2-task_alloc_branch_group.md  aspec-20-implement.md  code-review.md  coding-standards-review.md  feature-development.md  licensed-code-integration.md  release.md  self-code-review.md  spec-kit.md
benchmark/: bench_main.cpp
ci/: Makefile.ci
doc/: manual.adoc  manual_sql.adoc
example/: main.cpp
include/: nogdb.h  nogdb_algorithm.h  nogdb_compare.h  nogdb_context.h  nogdb_error.h  nogdb_errors.h  nogdb_types.h
include/nogdb/: nogdb.h  nogdb_compare.h  nogdb_context.h  nogdb_errors.h  nogdb_sql.h  nogdb_txn.h  nogdb_types.h  nogdb_version.h
lib/boost/: shared_mutex.hpp
lib/boost/config/: posix_features.hpp
lib/boost/config/no_tr1/: functional.hpp
lib/boost/config/stdlib/: libstdcpp3.hpp
lib/lemonxx/: lemon.c  lemon_base.h  lempar.c  lempar.cpp  lempar.cxx
lib/lmdb/: CMakeLists.txt  Makefile.bak  mdb.c
src/: algorithm.cpp  algorithm.hpp  base_txn.cpp  base_txn.hpp  blob.cpp  blob.hpp  builder.cpp  bytes.cpp  class.cpp  class_filter.cpp  compare.cpp  compare.hpp  compare_cursor.cpp  concurrent.hpp  condition.cpp  constant.hpp  context.cpp  cursor.cpp  datarecord.cpp  datarecord.hpp  datarecord_adapter.hpp  datastore.cpp  datastore.hpp  datatype.cpp  datatype.hpp  db.cpp  dbinfo_adapter.hpp  edge.cpp  env_handler.cpp  env_handler.hpp  generic.cpp  generic.hpp  graph.hpp  graph_filter.cpp  index.cpp  index.hpp  index_adapter.hpp  keyval.cpp  keyval.hpp  lmdb_engine.hpp  (+37 more)
test/: CMakeLists.txt  runtest.cpp  runtest.h  runtest_config.h  runtest_utils.h  test_context.cpp  test_edge.cpp  test_exec.h  test_expr.cpp  test_get.cpp  test_graph_operation.cpp  test_graph_relation.cpp  test_index.cpp  test_inheritance.cpp  test_misc.cpp  test_multithread.cpp  test_prepare.h  test_schema.cpp  test_schema_txn.cpp  test_sql.cpp  test_txn.cpp  test_type.cpp  test_vertex.cpp
test/apitest/: apitest.cpp  apitest.h  apitest_config.h  apitest_utils.h  test_context.cpp  test_edge.cpp  test_expr.cpp  test_get.cpp  test_graph_operation.cpp  test_graph_relation.cpp  test_index.cpp  test_inheritance.cpp  test_misc.cpp  test_multithread.cpp  test_prepare.h  test_schema.cpp  test_schema_txn.cpp  test_sql.cpp  test_txn.cpp  test_type.cpp  test_vertex.cpp
test/func_test/: context_test.cpp  edge_test.cpp  expr_test.cpp  func_test.cpp  func_test.h  func_test_config.h  func_test_cursor_utils.h  func_test_index_utils.h  func_test_utils.h  get_test.cpp  graph_operation_test.cpp  graph_relation_test.cpp  index_test.cpp  inheritance_test.cpp  misc_test.cpp  schema_test.cpp  schema_txn_test.cpp  setup_cleanup.h  sql_test.cpp  txn_test.cpp  type_test.cpp  vertex_test.cpp
test/functest/: functest.cpp  functest.h  functest_config.h  functest_cursor_utils.h  functest_index_utils.h  functest_utils.h  test_context.cpp  test_edge.cpp  test_expr.cpp  test_get.cpp  test_graph_operation.cpp  test_graph_relation.cpp  test_index.cpp  test_inheritance.cpp  test_misc.cpp  test_multithread.cpp  test_prepare.h  test_schema.cpp  test_schema_txn.cpp  test_sql.cpp  test_txn.cpp  test_type.cpp  test_vertex.cpp
test/module/: CMakeLists.txt  main.cpp  test_lmdb_interface.cpp
test/unit_test/: unit_test.cpp
test/unit_test/lmdb_engine/: basic_operation_test.cpp  cursor_operation_test.cpp
test/unittest/: unittest.cpp
test/unittest/lmdb_engine/: lmdb_engine_test.h  test_basic_operation.cpp  test_cursor_operation.cpp
